update address format

--- a/pages/contracts/contracts.mdx
+++ b/pages/contracts/contracts.mdx
@@ -4,38 +4,38 @@ Currently, the ChessFish contracts are deployed on Ethereum Mainnet, Arbitrum, a
 
 ### Ethereum Mainnet Contract Addresses
 
-| Contract name       | Address                                      |
-|---------------------|----------------------------------------------|
-| Deployer            | `0xC61bDCC3A088323D39Dbe364C10281982836506c` |
-| Chess Fish Token    | `0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20` |
-| Treasury Vesting    | `0x150bFDb78820542d370ceD245A4e7a5F5C131281` |
+| Contract name       | Address |
+|---------------------|---------|
+| Chess Fish Token    | [0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20](https://etherscan.io/address/0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20) |
+| Treasury Vesting    | [0x150bFDb78820542d370ceD245A4e7a5F5C131281](https://etherscan.io/address/0x150bFDb78820542d370ceD245A4e7a5F5C131281) |
+
 
 ### Arbitrum Contract Addresses
 
-| Contract name       | Address                                      |
-|---------------------|----------------------------------------------|
-| Deployer            | `0xC61bDCC3A088323D39Dbe364C10281982836506c` |
-| Chess Fish Token    | `0xc218A06a17FeB66B1a730889fB9624326Fabff4b` |
-| Dividend Splitter   | `0x973C170C3BC2E7E1B3867B3B29D57865efDDa59a` |
-| Chess NFT           | `0xbD1DFf018449AD4CBa7d3c0E982Cb9677b758f57` |
-| Move Verification   | `0x9ea6881ac1b5C4949E42Ae83D799622e2371A6c2` |
-| Gasless Game        | `0xeAbb5E5aF52Bf200c11F39e441B79746218Fe9d5` |
-| Chess Wager         | `0x3a228f23Df0e3c7E28FC6A39b463Cd7EED0CB25c` |
-| Crowd Sale          | `0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20` |
-| Tournament          | `0x00522De31D348b7dBe2c0cB3609851176678E6d7` |
-| Treasury Vesting    | `0x150bFDb78820542d370ceD245A4e7a5F5C131281` |
+| Contract name       | Address |
+|---------------------|---------|
+| Chess Fish Token    | [0xc218A06a17FeB66B1a730889fB9624326Fabff4b](https://arbiscan.io/address/0xc218A06a17FeB66B1a730889fB9624326Fabff4b) |
+| Dividend Splitter   | [0x973C170C3BC2E7E1B3867B3B29D57865efDDa59a](https://arbiscan.io/address/0x973C170C3BC2E7E1B3867B3B29D57865efDDa59a) |
+| Chess NFT           | [0xbD1DFf018449AD4CBa7d3c0E982Cb9677b758f57](https://arbiscan.io/address/0xbD1DFf018449AD4CBa7d3c0E982Cb9677b758f57) |
+| Move Verification   | [0x9ea6881ac1b5C4949E42Ae83D799622e2371A6c2](https://arbiscan.io/address/0x9ea6881ac1b5C4949E42Ae83D799622e2371A6c2) |
+| Gasless Game        | [0xeAbb5E5aF52Bf200c11F39e441B79746218Fe9d5](https://arbiscan.io/address/0xeAbb5E5aF52Bf200c11F39e441B79746218Fe9d5) |
+| Chess Wager         | [0x3a228f23Df0e3c7E28FC6A39b463Cd7EED0CB25c](https://arbiscan.io/address/0x3a228f23Df0e3c7E28FC6A39b463Cd7EED0CB25c) |
+| Crowd Sale          | [0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20](https://arbiscan.io/address/0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20) |
+| Tournament          | [0x00522De31D348b7dBe2c0cB3609851176678E6d7](https://arbiscan.io/address/0x00522De31D348b7dBe2c0cB3609851176678E6d7) |
+| Treasury Vesting    | [0x150bFDb78820542d370ceD245A4e7a5F5C131281](https://arbiscan.io/address/0x150bFDb78820542d370ceD245A4e7a5F5C131281) |
+
 
 ### Arbitrum Sepolia Testnet
 
-| Contract name       | Address                                      |
-|---------------------|----------------------------------------------|
-| Deployer            | `0xC61bDCC3A088323D39Dbe364C10281982836506c` |
-| Chess Fish Token    | `0xc218A06a17FeB66B1a730889fB9624326Fabff4b` |
-| Dividend Splitter   | `0x973C170C3BC2E7E1B3867B3B29D57865efDDa59a` |
-| Chess NFT           | `0xbD1DFf018449AD4CBa7d3c0E982Cb9677b758f57` |
-| Move Verification   | `0x9ea6881ac1b5C4949E42Ae83D799622e2371A6c2` |
-| Gasless Game        | `0xeAbb5E5aF52Bf200c11F39e441B79746218Fe9d5` |
-| Chess Wager         | `0x3a228f23Df0e3c7E28FC6A39b463Cd7EED0CB25c` |
-| Crowd Sale          | `0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20` |
-| Tournament          | `0x00522De31D348b7dBe2c0cB3609851176678E6d7` |
-| Treasury Vesting    | `0x150bFDb78820542d370ceD245A4e7a5F5C131281` |
+| Contract name       | Address |
+|---------------------|---------|
+| Chess Fish Token    | [0xc218A06a17FeB66B1a730889fB9624326Fabff4b](https://sepolia.arbiscan.io/address/0xc218A06a17FeB66B1a730889fB9624326Fabff4b) |
+| Dividend Splitter   | [0x973C170C3BC2E7E1B3867B3B29D57865efDDa59a](https://sepolia.arbiscan.io/address/0x973C170C3BC2E7E1B3867B3B29D57865efDDa59a) |
+| Chess NFT           | [0xbD1DFf018449AD4CBa7d3c0E982Cb9677b758f57](https://sepolia.arbiscan.io/address/0xbD1DFf018449AD4CBa7d3c0E982Cb9677b758f57) |
+| Move Verification   | [0x9ea6881ac1b5C4949E42Ae83D799622e2371A6c2](https://sepolia.arbiscan.io/address/0x9ea6881ac1b5C4949E42Ae83D799622e2371A6c2) |
+| Gasless Game        | [0xeAbb5E5aF52Bf200c11F39e441B79746218Fe9d5](https://sepolia.arbiscan.io/address/0xeAbb5E5aF52Bf200c11F39e441B79746218Fe9d5) |
+| Chess Wager         | [0x3a228f23Df0e3c7E28FC6A39b463Cd7EED0CB25c](https://sepolia.arbiscan.io/address/0x3a228f23Df0e3c7E28FC6A39b463Cd7EED0CB25c) |
+| Crowd Sale          | [0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20](https://sepolia.arbiscan.io/address/0xE2976A66E8CEF3932CDAEb935E114dCd5ce20F20) |
+| Tournament          | [0x00522De31D348b7dBe2c0cB3609851176678E6d7](https://sepolia.arbiscan.io/address/0x00522De31D348b7dBe2c0cB3609851176678E6d7) |
+| Treasury Vesting    | [0x150bFDb78820542d370ceD245A4e7a5F5C131281](https://sepolia.arbiscan.io/address/0x150bFDb78820542d370ceD245A4e7a5F5C131281) |
+
