--- a/pages/contracts/security.mdx
+++ b/pages/contracts/security.mdx
@@ -1,7 +1,3 @@
 ## Security
 
-Security is exceptionally important with any smart contract based project. 
-
-Being bug bounty hunters themselves on Immunefi, the developers of the Chess.fish protocol know the difficulty of making smart contracts truly secure. 
-
-View the full [source code for ChessFish on GitHub](https://github.com/Chess-Fish/v1-core).
+View the full [source code for ChessFish on GitHub](https://github.com/Chess-Fish/v1-core)
